map1/gap_follower/log/build_2025-04-22_13-16-12/gap_follower_pkg/stderr.log
  File "/home/salem/Desktop/f1tenth-autonomous-racing/map1/gap_follower/install/gap_follower_pkg/lib/python3.8/site-packages/gap_follower_pkg/gap_follower.py", line 8
    3. Publish as a Marker in RViz
       ^
SyntaxError: invalid syntax

